Fixed responsive design for high resolution

--- a/src/components/Main/modules/AboutUs/components/MainInfo/MainInfo.scss
+++ b/src/components/Main/modules/AboutUs/components/MainInfo/MainInfo.scss
@@ -34,7 +34,7 @@
 }
 
 .main-info__info-text-wrapper {
-  max-height: 300px;
+  max-height: 18em;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -43,7 +43,7 @@
   row-gap: 32px;
 
   @media only screen and (max-width: 1275px) {
-    max-height: 450px;
+    max-height: 25em;
     column-gap: 32px;
     //align-items: center;
   }
