--- a/src/components/Main/modules/AboutUs/AboutUs.scss
+++ b/src/components/Main/modules/AboutUs/AboutUs.scss
@@ -24,8 +24,7 @@
   }
 }
 
-.about-us::after {
-  content: '';
+.test {
   position: absolute;
   left: 0;
   right: 0;
@@ -33,8 +32,9 @@
 
   height: 800px;
 
-  background-image: url(../../../../assets/images/about-us_background.png);
-  background-size: cover;
+  background: url(../../../../assets/images/about-us_background.png);
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: center bottom;
 
   z-index: 1;
@@ -52,6 +52,36 @@
   }
 }
 
+.test::before {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 287px;
+  background: linear-gradient(
+    to left,
+    #151f0700 calc((100vw - 1920px) / 2 + 1720px),
+    #151f07 calc((100vw - 1920px) / 2 + 1920px),
+    #000000 100%
+  );
+}
+
+.test:after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 285px;
+  background: linear-gradient(
+    to right,
+    #26220900 calc((100vw - 1920px) / 2 + 1720px),
+    #262209 calc((100vw - 1920px) / 2 + 1920px),
+    #000000 100%
+  );
+}
+
 .about-us::before {
   content: '';
   position: absolute;
@@ -62,7 +92,8 @@
   height: 1450px;
 
   background-image: url(../../../../assets/icons/about-us_background-leaves.svg);
-  background-size: cover;
+  background-size: contain;
+  background-repeat: no-repeat;
   background-position: top;
 
   z-index: 0;
