--- a/src/components/Main/modules/MainBanner/MainBanner.scss
+++ b/src/components/Main/modules/MainBanner/MainBanner.scss
@@ -1,12 +1,14 @@
 .main-banner {
   width: 100%;
   height: 940px;
-  background-image: url(../../../../assets/images/main-banner_background.png);
+  background-image: url(../../../../assets/images/main-banner_background-multiply.png);
   background-position: top center;
   background-size: cover;
 
+  position: relative;
+
   @media only screen and (max-width: 1375px) {
-    background-position: top right -200px;
+    background-position: top center -200px;
   }
 
   @media only screen and (max-width: 900px) {
@@ -25,6 +27,25 @@
     background-size: contain;
     background-position: top center;
   }
+}
+
+.main-banner::after {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  content: '';
+  background: linear-gradient(
+      to left,
+      #dcd7d400 calc((100vw - 1920px) / 2 + 1720px),
+      #dcd7d4 calc((100vw - 1920px) / 2 + 1920px + 100px)
+    ),
+    linear-gradient(
+      to right,
+      #dcd7d400 calc((100vw - 1920px) / 2 + 1720px),
+      #dcd7d4 calc((100vw - 1920px) / 2 + 1920px + 100px)
+    );
 }
 
 .main-banner__content {
