--- a/src/components/Main/modules/MainBanner/MainBanner.scss
+++ b/src/components/Main/modules/MainBanner/MainBanner.scss
@@ -58,6 +58,9 @@
   grid-auto-rows: max-content;
   grid-gap: 31px;
 
+  position: relative;
+  z-index: 2;
+
   @media only screen and (max-width: 1375px) {
     padding: 362px 0 0;
     max-width: unset;
