--- a/src/components/Main/modules/AboutUs/components/OurBenefits/OurBenefits.scss
+++ b/src/components/Main/modules/AboutUs/components/OurBenefits/OurBenefits.scss
@@ -1,11 +1,25 @@
 .our-benefits {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  scroll-snap-align: start;
+
+  @media only screen and (max-width: 900px) {
+    min-height: unset;
+    display: block;
+  }
+}
+
+.our-benefits__content {
+  width: 100%;
   display: grid;
   grid-auto-flow: row;
   row-gap: 70px;
-  padding: 148px 70px 0;
+  padding: 0 70px 0;
 
   @media only screen and (max-width: 1375px) {
-    padding: 148px 25px 0;
+    padding: 0 25px 0;
   }
 
   @media only screen and (max-width: 900px) {
@@ -64,9 +78,12 @@
 
   @media only screen and (max-width: 1375px) {
     grid-template-columns: 1fr;
+    row-gap: 25px;
   }
 
   @media only screen and (max-width: 900px) {
+    grid-template-columns: 1fr;
+
     row-gap: 18px;
   }
 
@@ -92,12 +109,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  column-gap: 20px;
 
   background-color: var(--white--22a);
   border-radius: 15px;
   padding: 0 50px;
 
   box-shadow: 0px 4px 4px var(--black--15a);
+
+  @media only screen and (max-width: 1375px) {
+  }
 
   @media only screen and (max-width: 900px) {
     padding: 13px 30px;
@@ -115,6 +136,8 @@
     @media only screen and (max-width: 1375px) {
       width: auto;
       margin: unset;
+    }
+    @media only screen and (max-width: 900px) {
     }
   }
 
