--- a/src/components/Main/modules/AboutUs/components/SecondaryInfo/SecondaryInfo.scss
+++ b/src/components/Main/modules/AboutUs/components/SecondaryInfo/SecondaryInfo.scss
@@ -12,6 +12,7 @@
   @media only screen and (max-width: 600px) {
     padding: 35px 10px 0;
   }
+  scroll-snap-align: start;
 }
 
 .secondary-info__content {
