--- a/src/components/Main/modules/Research/Research.scss
+++ b/src/components/Main/modules/Research/Research.scss
@@ -1,23 +1,22 @@
 .research {
-  padding: 335px 0 156px;
+  padding: 0 0 156px;
   background-color: var(--white);
-  overflow: hidden;
   position: relative;
 
   @media only screen and (max-width: 1515px) {
-    padding: 335px 70px 156px;
+    padding: 0 70px 156px;
   }
 
   @media only screen and (max-width: 1050px) {
-    padding: 335px 0 156px;
+    padding: 0 0 156px;
   }
 
   @media only screen and (max-width: 900px) {
-    padding: 200px 0 50px;
+    padding: 140px 0 50px;
   }
 
   @media only screen and (max-width: 600px) {
-    padding: 168px 0 62px;
+    padding: 118px 0 62px;
   }
 }
 
@@ -56,106 +55,4 @@
 
   position: relative;
   z-index: 1;
-}
-
-.research__title {
-  font-weight: 100;
-
-  @media only screen and (max-width: 1375px) {
-    text-align: center;
-  }
-}
-
-.research__title-wrapper > .research__title {
-  @media only screen and (max-width: 600px) {
-    font-size: 30px;
-    line-height: 37px;
-  }
-}
-
-.research__our-mission {
-  max-width: 700px;
-  margin: 24px 0 35px;
-  padding: 23px 0;
-
-  text-align: center;
-  font-weight: 700;
-
-  @media only screen and (max-width: 600px) {
-    margin: 12px 0 31px;
-    padding: 0;
-  }
-}
-
-.research__share-experience {
-  margin-top: 104px;
-  padding: 13px 25px;
-  border-radius: 15px;
-
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-columns: minmax(min-content, 275px) minmax(min-content, 700px);
-  column-gap: 30px;
-
-  background-color: var(--green--80a);
-
-  @media only screen and (max-width: 1050px) {
-    margin: 104px 70px 0;
-    grid-auto-flow: row;
-    grid-template-rows: max-content max-content;
-    grid-template-columns: 1fr;
-    row-gap: 30px;
-  }
-
-  @media only screen and (max-width: 600px) {
-    margin: 25px 0 0;
-
-    row-gap: 15px;
-  }
-}
-
-.research__share-experience-title {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  text-align: right;
-
-  font-weight: 600;
-  color: var(--white);
-
-  @media only screen and (max-width: 1050px) {
-    justify-content: flex-start;
-    text-align: left;
-  }
-}
-
-.research__share-experience-text {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-
-  font-weight: 700;
-  color: var(--white);
-}
-
-.research__total {
-  margin-top: 35px;
-  padding: 73px 0 0 100px;
-  align-self: flex-start;
-
-  @media only screen and (max-width: 1515px) {
-    border-radius: 15px;
-    background-color: var(--white--70a);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    padding: 50px 50px 70px;
-  }
-  @media only screen and (max-width: 900px) {
-    align-self: center;
-    text-align: center;
-    background-color: unset;
-    box-shadow: unset;
-  }
-  @media only screen and (max-width: 600px) {
-    padding: 0 25px;
-  }
 }
