--- a/src/components/App/template/App.scss
+++ b/src/components/App/template/App.scss
@@ -2,4 +2,10 @@
   position: relative;
   //max-width: 1920px;
   margin: 0 auto;
+
+  @media only screen and (min-width: 1376px) {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+  }
 }
