--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,6 +1,9 @@
 .footer {
+  min-height: 100vh;
   padding: 163px 0;
   background-color: var(--lightgreen);
+
+  scroll-snap-align: start;
 
   @media only screen and (max-width: 900px) {
     padding: 75px 0 0;
