--- a/src/components/Main/modules/AboutUs/components/MainInfo/MainInfo.scss
+++ b/src/components/Main/modules/AboutUs/components/MainInfo/MainInfo.scss
@@ -1,4 +1,18 @@
 .main-info {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  @media only screen and (max-width: 900px) {
+    display: block;
+    min-height: unset;
+    padding-top: 50px;
+  }
+  scroll-snap-align: start;
+}
+
+.main-info__content {
   display: grid;
   grid-auto-flow: row;
   grid-gap: 10px;
