--- a/src/components/Main/modules/MainBanner/MainBanner.scss
+++ b/src/components/Main/modules/MainBanner/MainBanner.scss
@@ -1,14 +1,24 @@
 .main-banner {
   width: 100%;
-  height: 940px;
+  //height: 940px;
+  min-height: 100vh;
   background-image: url(../../../../assets/images/main-banner_background-multiply.png);
   background-position: top center;
   background-size: cover;
-
   position: relative;
+  scroll-snap-align: start;
 
-  @media only screen and (max-width: 1375px) {
+  @media only screen and (max-width: 1920px) {
+    background-image: url(../../../../assets/images/main-banner_background.png);
+    background-position: center center;
+  }
+
+  @media only screen and (max-width: 1515px) {
     background-position: top center -200px;
+
+  }
+  @media only screen and (max-width: 1375px) {
+    background-position: top right;
   }
 
   @media only screen and (max-width: 900px) {
@@ -18,13 +28,17 @@
 
   @media only screen and (max-width: 600px) {
     height: 600px;
-    background-position: top right -150px;
+    background-image: url(../../../../assets/images/main-banner_background-mobile.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
   }
 
   @media only screen and (max-width: 375px) {
     height: 825px;
     background-image: url(../../../../assets/images/main-banner_background-mobile.png);
-    background-size: contain;
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: top center;
   }
 }
@@ -75,7 +89,7 @@
 
   @media only screen and (max-width: 600px) {
     height: 100%;
-    padding: 350px 0 0;
+    padding: 45vh 0 0;
     grid-gap: 11px;
     place-content: unset;
     grid-template-rows: 1fr max-content max-content;
@@ -84,6 +98,7 @@
 
 .main-banner__logo {
   @media only screen and (max-width: 600px) {
+
   }
 }
 
