--- a/src/components/Main/modules/AboutUs/AboutUs.scss
+++ b/src/components/Main/modules/AboutUs/AboutUs.scss
@@ -1,96 +1,11 @@
 .about-us {
   width: 100%;
-  min-height: 2871px;
-  padding-bottom: 200px;
   background: var(--main-gradient--first), var(--main-gradient--second);
   position: relative;
 
   & * {
     z-index: 2;
   }
-
-  @media only screen and (max-width: 1515px) {
-    padding-bottom: 400px;
-  }
-
-  @media only screen and (max-width: 900px) {
-    min-height: unset;
-    max-height: 1900px;
-    padding-bottom: 200px;
-  }
-
-  @media only screen and (max-width: 600px) {
-    min-height: unset;
-    max-height: 1700px;
-  }
-}
-
-.about-us__bottom-img {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-
-  height: 800px;
-
-  background: url(../../../../assets/images/about-us_background.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center bottom;
-
-  z-index: 1;
-
-  @media only screen and (max-width: 2560px) {
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  @media only screen and (max-width: 1515px) {
-    height: 700px;
-  }
-
-  @media only screen and (max-width: 1375px) {
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  @media only screen and (max-width: 900px) {
-    height: 400px;
-  }
-
-  @media only screen and (max-width: 600px) {
-    height: 335px;
-  }
-}
-
-.about-us__bottom-img::before {
-  position: absolute;
-  content: '';
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 287px;
-  background: linear-gradient(
-    to left,
-    #151f0700 calc((100vw - 1920px) / 2 + 1720px),
-    #151f07 calc((100vw - 1920px) / 2 + 1920px),
-    #000000 100%
-  );
-}
-
-.about-us__bottom-img:after {
-  position: absolute;
-  content: '';
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 285px;
-  background: linear-gradient(
-    to right,
-    #26220900 calc((100vw - 1920px) / 2 + 1720px),
-    #262209 calc((100vw - 1920px) / 2 + 1920px),
-    #000000 100%
-  );
 }
 
 .about-us::before {
@@ -98,9 +13,9 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 473px;
+  top: 29.5rem;
 
-  height: 1450px;
+  height: 100%;
 
   background-image: url(../../../../assets/icons/about-us_background-leaves.svg);
   background-size: contain;
@@ -111,13 +26,6 @@
 }
 
 .about-us__content {
-  padding: 0 0 398px;
-
-  @media only screen and (max-width: 1515px) {
-    padding: 0 0 398px;
-  }
-
-  @media only screen and (max-width: 600px) {
-    padding: 0 0 0;
-  }
+  display: flex;
+  flex-direction: column;
 }
