--- a/src/components/Main/modules/MainBanner/MainBanner.scss
+++ b/src/components/Main/modules/MainBanner/MainBanner.scss
@@ -15,7 +15,6 @@
 
   @media only screen and (max-width: 1515px) {
     background-position: top center -200px;
-
   }
   @media only screen and (max-width: 1375px) {
     background-position: top right;
@@ -43,7 +42,7 @@
   }
 }
 
-.main-banner::after {
+/*.main-banner::after {
   position: absolute;
   left: 0;
   right: 0;
@@ -61,36 +60,36 @@
       #dcd7d4 calc((100vw - 1920px) / 2 + 1920px + 100px)
     );
 }
+*/
 
 .main-banner__content {
   height: 100%;
-  padding: 362px 0 191px;
-  max-width: 796px;
+  max-width: 50rem;
+  padding: 33.3vh 0 0;
 
   display: grid;
   grid-auto-flow: row;
   grid-auto-rows: max-content;
-  grid-gap: 31px;
+  grid-gap: 2rem;
 
   position: relative;
   z-index: 2;
 
   @media only screen and (max-width: 1375px) {
-    padding: 362px 0 0;
     max-width: unset;
     place-content: center;
   }
 
   @media only screen and (max-width: 900px) {
-    padding: 362px 0 50px;
+    padding: 33.3vh 0 5rem;
     place-content: end center;
-    grid-gap: 20px;
+    grid-gap: 2rem;
   }
 
   @media only screen and (max-width: 600px) {
     height: 100%;
-    padding: 45vh 0 0;
-    grid-gap: 11px;
+    padding: 50vh 0 0;
+    grid-gap: 1rem;
     place-content: unset;
     grid-template-rows: 1fr max-content max-content;
   }
@@ -98,24 +97,21 @@
 
 .main-banner__logo {
   @media only screen and (max-width: 600px) {
-
   }
 }
 
 .main-banner__text {
-  max-width: 592px;
+  max-width: 37rem;
 
   @media only screen and (max-width: 1375px) {
-    margin-top: 100px;
+    margin-top: 6.25rem;
     justify-self: center;
     text-align: center;
   }
   @media only screen and (max-width: 900px) {
-    margin-top: 75px;
+    margin-top: 7.5rem;
   }
-
   @media only screen and (max-width: 600px) {
-    max-width: 400px;
     margin-top: auto;
   }
 }
