--- a/src/components/Main/modules/Research/components/ResearchSteps/ResearchSteps.scss
+++ b/src/components/Main/modules/Research/components/ResearchSteps/ResearchSteps.scss
@@ -1,5 +1,7 @@
 .research-steps {
-  max-width: 1175px;
+  @media only screen and (max-width: 2560px) {
+    max-width: 73.25rem;
+  }
   @media only screen and (max-width: 900px) {
     padding: 0 10px;
   }
@@ -26,7 +28,7 @@
 
 .research-steps__step:not(.research-steps__step:first-child)::before {
   position: absolute;
-  left: 410px;
+  left: 710px;
   top: 0;
 
   content: '';
@@ -34,6 +36,10 @@
   height: 50%;
   background-color: var(--black);
   z-index: 0;
+
+  @media only screen and (max-width: 2560px) {
+    left: 410px;
+  }
 
   @media only screen and (max-width: 1375px) {
     left: 380px;
@@ -46,7 +52,7 @@
 
 .research-steps__step:not(.research-steps__step:last-child)::after {
   position: absolute;
-  left: 410px;
+  left: 710px;
   top: 50%;
 
   content: '';
@@ -55,6 +61,9 @@
   background-color: var(--black);
   z-index: 0;
 
+  @media only screen and (max-width: 2560px) {
+    left: 410px;
+  }
   @media only screen and (max-width: 1375px) {
     left: 380px;
   }
@@ -67,17 +76,18 @@
 .research-steps__step-content {
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: 300px max-content 1fr;
+  grid-template-columns: 600px max-content 1fr;
   column-gap: 60px;
 
+  @media only screen and (max-width: 2560px) {
+    grid-template-columns: 300px max-content 1fr;
+  }
   @media only screen and (max-width: 1375px) {
     column-gap: 30px;
   }
-
   @media only screen and (max-width: 900px) {
     grid-template-columns: max-content 1fr;
     grid-template-rows: max-content 1fr;
-
     row-gap: 4px;
   }
 }
