--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -5,6 +5,18 @@
 
 html {
   overflow-x: hidden;
+
+  font-size: 32px;
+
+  @media only screen and (max-width: 3839px) {
+    font-size: 21px;
+  }
+  @media only screen and (max-width: 2560px) {
+    font-size: 16px;
+  }
+  @media only screen and (max-width: 900px) {
+    font-size: 10px;
+  }
 }
 
 .paragraph {
