--- a/src/components/Container/Container.scss
+++ b/src/components/Container/Container.scss
@@ -3,4 +3,9 @@
   margin: 0 auto;
   padding: 0 var(--container-padding);
   max-width: var(--max-container-width);
+
+  @media only screen and (min-width: 1921px) {
+    max-width: 100vw;
+    padding: 0 9.35vw;
+  }
 }
