--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,18 +1,29 @@
 .footer {
   min-height: 100vh;
-  padding: 163px 0;
+  padding: 10rem 0;
+
   background-color: var(--lightgreen);
 
   scroll-snap-align: start;
 
+  @media only screen and (max-width: 1375px) {
+    min-height: unset;
+  }
   @media only screen and (max-width: 900px) {
-    padding: 75px 0 0;
+    padding: 7.5rem 0 0;
   }
 }
 
 .footer__content {
-  max-width: 952px;
+  max-width: 50vw;
   margin: 0 auto;
+
+  display: flex;
+  flex-direction: column;
+
+  @media only screen and (max-width: 1920px) {
+    max-width: 59.5rem;
+  }
 }
 
 .footer__title {
@@ -21,31 +32,31 @@
 
   .title {
     @media only screen and (max-width: 900px) {
-      font-size: 30px;
-      line-height: 31px;
+      font-size: 3rem;
+      line-height: 1;
     }
   }
 }
 
 .footer__telegram-link {
+  width: 100%;
+  padding: 0.375rem 0;
+
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 13px;
+  column-gap: 0.8125rem;
 
-  width: 100%;
-  padding: 6px 0;
-  border-radius: 15px;
+  border-radius: 1rem;
   outline: 2px solid transparent;
-
   background-color: var(--white--28a);
 
   transition: all 0.2s ease-in;
   cursor: pointer;
 
   @media only screen and (max-width: 900px) {
-    padding: 3px 0;
-    column-gap: 4px;
+    padding: 0.3rem 0;
+    column-gap: 0.4rem;
   }
 }
 
@@ -59,39 +70,42 @@
 }
 
 .footer__telegram-icon {
+  width: 4rem;
+  height: 4rem;
   transition: all 0.2s ease-in;
 
   @media only screen and (max-width: 900px) {
-    width: 32px;
-    height: 32px;
+    width: 3.2rem;
+    height: 3.2rem;
   }
 }
 
 .footer__contacts {
-  padding: 64px 0 52px;
+  padding: 4rem 0 3.25rem;
+
   display: grid;
   grid-auto-flow: row;
   grid-template-columns: 1fr;
-
-  row-gap: 14px;
+  row-gap: 0.875rem;
 
   text-align: center;
 
   @media only screen and (max-width: 900px) {
-    padding: 28px 0 55px;
+    padding: 2.8rem 0 5.5rem;
   }
 }
 
 .footer__logos {
-  margin-top: 106px;
+  margin-top: 6.625rem;
+
   display: flex;
-  column-gap: 56px;
+  column-gap: 3.5rem;
 
   @media only screen and (max-width: 900px) {
-    margin-top: 200px;
-    margin-bottom: 32px;
-    column-gap: 32px;
+    margin-top: 20rem;
+    margin-bottom: 3.2rem;
     justify-content: center;
+    column-gap: 3.2rem;
   }
 }
 
@@ -99,14 +113,15 @@
   display: none;
 
   @media only screen and (max-width: 900px) {
+    width: 100vw;
+    align-self: center;
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: max-content;
     place-content: center;
-    column-gap: 30px;
+    column-gap: 3rem;
 
-    margin: 0 calc(-1 * var(--container-padding));
-    padding: 12px var(--container-padding) 70px;
+    padding: 1.2rem var(--container-padding) 7rem;
 
     background-color: var(--white);
   }
@@ -114,13 +129,17 @@
 
 .footer__navigation-link {
   font-family: var(--font-family--primary);
-  font-size: 11px;
+  font-size: 0.625rem;
   font-weight: 500;
-  line-height: 18px;
+  line-height: 1.8;
 
   color: var(--font--dark);
   text-decoration: none;
   transition: color 0.2s ease-in;
+
+  @media only screen and (max-width: 900px) {
+    font-size: 1rem;
+  }
 }
 
 .footer__navigation-link-wrapper {
