--- a/src/components/Footer/components/ContactUsForm/ContactUsForm.scss
+++ b/src/components/Footer/components/ContactUsForm/ContactUsForm.scss
@@ -6,45 +6,45 @@
   display: grid;
   grid-auto-flow: column;
   grid-template-columns: 1fr max-content;
-  column-gap: 45px;
+  column-gap: 2.75rem;
 
   @media only screen and (max-width: 900px) {
     grid-template-columns: 1fr;
     grid-template-rows: max-content max-content;
-    row-gap: 7px;
+    row-gap: 0.7rem;
   }
 }
 
 .contact-us-form__input,
 .contact-us-form__button {
   background-color: var(--white--28a);
-  border-radius: 15px;
+  border-radius: 1rem;
   border: none;
 }
 
 .contact-us-form__input {
-  padding: 24px 40px;
+  padding: 1.5rem 2.5rem;
 
   outline: 2px solid transparent;
   transition: all 0.2s ease-in;
 
   @media only screen and (max-width: 900px) {
-    height: 38px;
-    padding: 10px;
+    height: 3.8rem;
+    padding: 1rem;
   }
 }
 
 .contact-us-form__input::placeholder {
   font-family: var(--font-family--primary);
-  font-size: 18px;
+  font-size: 1.125rem;
   font-weight: 400;
-  line-height: 28px;
+  line-height: 1.55;
 
   color: var(--black--50a);
 
   @media only screen and (max-width: 900px) {
-    font-size: 11px;
-    line-height: 19.5px;
+    font-size: 1.1rem;
+    line-height: 1.8;
   }
 }
 
@@ -58,16 +58,16 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 24px 62px;
+  padding: 1.5rem 4rem;
 
   outline: 2px solid transparent;
   cursor: pointer;
   transition: all 0.2s ease-in;
 
   @media only screen and (max-width: 900px) {
-    height: 38px;
+    height: 3.8rem;
     width: fit-content;
-    padding: 10px 44.5px;
+    padding: 1rem 4.45rem;
 
     justify-self: center;
   }
