--- a/src/components/Header/modules/HeaderNavigation/HeaderNavigation.scss
+++ b/src/components/Header/modules/HeaderNavigation/HeaderNavigation.scss
@@ -2,8 +2,8 @@
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
-  grid-gap: 30px;
-  padding: 0 118px;
+  grid-gap: 2rem;
+  padding: 0 7.4rem;
 
   @media only screen and (max-width: 1375px) {
     padding: 0 50px;
@@ -18,7 +18,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 5px;
+
+  padding: 0 0.25rem;
 
   cursor: pointer;
 
@@ -39,7 +40,7 @@
   font-family: var(--font-family--primary);
   font-size: var(--p--medium);
   font-weight: 400;
-  line-height: 25px;
+  line-height: 1.5;
 
   color: var(--black);
   text-decoration: none;
