--- a/src/components/Logo/Logo.scss
+++ b/src/components/Logo/Logo.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-auto-flow: column;
   grid-auto-columns: max-content;
-  grid-gap: 12px;
+  grid-gap: 0.75rem;
 
   font-family: var(--font-family--secondary);
 
@@ -10,26 +10,25 @@
 }
 
 .logo.logo--main {
-  @media only screen and (max-width: 600px) {
-    column-gap: 6px;
+  @media only screen and (max-width: 900px) {
+    column-gap: 0.6rem;
   }
 
   .logo__main-text {
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 700;
-    line-height: 45px;
+    line-height: 1.1;
     color: var(--green);
 
-    @media only screen and (max-width: 600px) {
-      font-size: 20px;
-      line-height: 22.3px;
+    @media only screen and (max-width: 900px) {
+      font-size: 2rem;
     }
   }
 
   .logo__subtitle-text {
-    @media only screen and (max-width: 600px) {
-      font-size: 5px;
-      line-height: 6px;
+    @media only screen and (max-width: 900px) {
+      font-size: 0.5rem;
+      //line-height: 6px;
     }
   }
 
@@ -37,12 +36,19 @@
     display: flex;
     align-items: flex-end;
 
-    padding-bottom: 2.5px;
+    padding-bottom: 0.15rem;
 
-    @media only screen and (max-width: 600px) {
+    svg {
+      width: 4.875rem;
+      height: 3.5rem;
+    }
+
+    @media only screen and (max-width: 900px) {
+      padding-bottom: 0.25rem;
+
       svg {
-        width: 41px;
-        height: 29px;
+        width: 4.1rem;
+        height: 2.9rem;
       }
     }
   }
@@ -56,8 +62,8 @@
 }
 
 .logo.logo--alt {
-  @media only screen and (max-width: 600px) {
-    column-gap: 6px;
+  @media only screen and (max-width: 900px) {
+    column-gap: 0.6rem;
   }
 
   .logo__text {
@@ -65,14 +71,13 @@
   }
 
   .logo__main-text {
-    font-size: 40px;
+    font-size: 2.5rem;
     font-weight: 700;
-    line-height: 45px;
+    line-height: 1.125;
     color: var(--white);
 
-    @media only screen and (max-width: 600px) {
-      font-size: 20px;
-      line-height: 22.3px;
+    @media only screen and (max-width: 900px) {
+      font-size: 2rem;
     }
   }
 
@@ -82,10 +87,15 @@
     align-items: center;
     position: relative;
 
-    @media only screen and (max-width: 600px) {
+    svg {
+      width: 4.875rem;
+      height: 3.5rem;
+    }
+
+    @media only screen and (max-width: 900px) {
       svg {
-        width: 41px;
-        height: 29px;
+        width: 4.1rem;
+        height: 2.9rem;
       }
     }
   }
@@ -102,67 +112,77 @@
     align-items: center;
 
     font-family: var(--font-family--logo-icon);
-    font-size: 30px;
-    line-height: 36px;
+    font-size: 1.875rem;
+    line-height: 1.2;
     color: var(--white);
 
-    @media only screen and (max-width: 600px) {
-      font-size: 15px;
-      line-height: 18px;
+    @media only screen and (max-width: 900px) {
+      font-size: 1.5rem;
     }
   }
 }
 
 .logo.logo--alt.logo--alt-large {
+  grid-gap: 1.5rem;
+
+  @media only screen and (max-width: 900px) {
+    place-content: center center;
+  }
+
+  @media only screen and (max-width: 600px) {
+    grid-gap: 0.8rem;
+  }
   .logo__main-text {
-    font-size: 128px;
+    font-size: 8rem;
     font-weight: 700;
-    line-height: 143px;
+    line-height: 1.125;
     color: var(--white);
 
     @media only screen and (max-width: 900px) {
-      font-size: 90px;
-      line-height: 100px;
+      font-size: 9rem;
     }
 
     @media only screen and (max-width: 600px) {
-      font-size: 40px;
-      line-height: 45px;
+      font-size: 4rem;
     }
   }
 
   .logo__icon-wrapper {
+    svg {
+      * {
+        //stroke-width: 0.375rem;
+      }
+      width: 13.25rem;
+      height: 9.5rem;
+    }
+
     @media only screen and (max-width: 900px) {
       svg {
-        width: 128px;
-        height: 98px;
+        width: 12.8rem;
+        height: 9.8rem;
       }
     }
     @media only screen and (max-width: 600px) {
       svg {
-        stroke-width: 2px;
-        width: 68px;
-        height: 48px;
+        width: 6.8rem;
+        height: 4.8rem;
       }
     }
   }
 
   .logo__icon-text {
-    font-size: 80px;
-    line-height: 97px;
+    font-size: 5rem;
+    line-height: 1.2125;
 
     @media only screen and (max-width: 900px) {
-      font-size: 48px;
-      line-height: 54px;
+      font-size: 4.8rem;
+      line-height: 1.125;
     }
 
     @media only screen and (max-width: 600px) {
-      font-size: 25px;
-      line-height: 30px;
+      font-size: 2.5rem;
+      line-height: 1.2;
     }
-  }
-  @media only screen and (max-width: 900px) {
-    place-content: center center;
   }
 }
 
@@ -171,14 +191,18 @@
   grid-auto-flow: row;
   grid-auto-rows: max-content;
   grid-auto-columns: max-content;
-  grid-gap: 4px;
+  grid-gap: 0.25rem;
 
   text-align: center;
+
+  @media only screen and (max-width: 900px) {
+    grid-gap: 0.4rem;
+  }
 }
 
 .logo__subtitle-text {
-  font-size: 10.5px;
+  font-size: 0.66rem;
   font-weight: 700;
-  line-height: 12px;
+  line-height: 1.2;
   color: var(--green);
 }
