--- a/src/components/Main/modules/AboutUs/components/Idea/Idea.scss
+++ b/src/components/Main/modules/AboutUs/components/Idea/Idea.scss
@@ -1,44 +1,43 @@
-.main-info {
+.idea {
   min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  @media only screen and (max-width: 900px) {
+  @media only screen and (max-width: 1375px) {
     display: block;
     min-height: unset;
-    padding-top: 50px;
+    padding-top: 5rem;
   }
   scroll-snap-align: start;
 }
 
-.main-info__content {
+.idea__content {
   display: grid;
   grid-auto-flow: row;
-  grid-gap: 10px;
+  grid-gap: 1rem;
 
-  padding: 73px 171px 120px;
+  padding: 4.5625rem 10.625rem 7.5rem;
   background-color: var(--white--28a);
-  box-shadow: 0px 4px 4px var(--black--15a);
-
-  border-radius: 15px;
+  box-shadow: 0px 0.25rem 0.25rem var(--black--15a);
+  border-radius: 1rem;
 
   @media only screen and (max-width: 1515px) {
-    padding: 73px 100px 120px;
+    padding: 4.5625rem 6.25rem 7.5rem;
   }
   @media only screen and (max-width: 1375px) {
-    padding: 50px 50px 70px;
+    padding: 3.125rem 3.125rem 4.375rem;
   }
   @media only screen and (max-width: 900px) {
-    padding: 11px 15px 23px;
+    padding: 1.1rem 1.5rem 2.3rem;
   }
   @media only screen and (max-width: 600px) {
-    padding: 11px 12px 23px;
-    margin: 0 20px;
+    padding: 1.1rem 1.2rem 2.3rem;
+    margin: 0 2rem;
   }
 }
 
-.main-info__title {
+.idea__title {
   font-weight: 100;
   color: var(--black);
 
@@ -47,32 +46,31 @@
   }
 }
 
-.main-info__info-text-wrapper {
-  max-height: 18em;
+.idea__info-text-wrapper {
+  max-height: 18rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
 
-  column-gap: 112px;
-  row-gap: 32px;
+  column-gap: 7rem;
+  row-gap: 2rem;
 
   @media only screen and (max-width: 1275px) {
-    max-height: 25em;
-    column-gap: 32px;
-    //align-items: center;
+    max-height: 25rem;
+    column-gap: 2rem;
   }
   @media only screen and (max-width: 1050px) {
     max-height: unset;
     flex-wrap: nowrap;
   }
   @media only screen and (max-width: 900px) {
-    row-gap: 18px;
+    row-gap: 1.8rem;
   }
 }
 
-.main-info__info-text {
+.idea__info-text {
   display: flex;
-  max-width: calc((100% - 112px) / 2);
+  max-width: calc((100% - 7rem) / 2);
   .title {
     font-weight: 600;
     color: var(--font--dark);
