--- a/src/components/Main/modules/MainBanner/components/ParticipateButton/ParticipateButton.scss
+++ b/src/components/Main/modules/MainBanner/components/ParticipateButton/ParticipateButton.scss
@@ -1,27 +1,23 @@
 .participate-button {
   padding: 0;
   background-color: var(--white--50a);
-  border-radius: 15px;
-  box-shadow: 0px 4px 4px var(--black--15a);
+  border-radius: 1rem;
+  box-shadow: 0px 0.25rem 0.25rem var(--black--15a);
   border: none;
 
   font-family: var(--font-family--primary);
-  font-size: 30px;
+  font-size: 1.875rem;
   font-weight: 600;
-  line-height: 28px;
+  line-height: 1;
   color: var(--green);
-
+  transition: all 0.2s ease-in;
   cursor: pointer;
 
-  transition: all 0.2s ease-in;
-
   @media only screen and (max-width: 900px) {
-    font-size: 22px;
+    font-size: 2.2rem;
   }
-
   @media only screen and (max-width: 600px) {
-    height: 30px;
-    font-size: 15px;
+    font-size: 1.5rem;
   }
 }
 
@@ -32,16 +28,15 @@
 
 .participate-button__link {
   display: flex;
-  padding: 16px 49px;
+  padding: 1rem 3.125rem;
 
   text-decoration: none;
   color: inherit;
 
   @media only screen and (max-width: 900px) {
-    padding: 10px 49px;
+    padding: 1rem 5rem;
   }
-
   @media only screen and (max-width: 600px) {
-    padding: 1px 14px;
+    padding: 0.75rem 1.4rem;
   }
 }
