--- a/src/components/Main/modules/AboutUs/components/Info/Info.scss
+++ b/src/components/Main/modules/AboutUs/components/Info/Info.scss
@@ -24,7 +24,7 @@
 .info__content {
   width: 100%;
   max-height: 20rem;
-  margin-bottom: -20vh;
+  margin-bottom: -100%;
 
   display: flex;
   flex-direction: column;
@@ -32,10 +32,14 @@
   flex-wrap: wrap;
   grid-gap: 2rem;
 
+  @media only screen and (max-width: 2560px) {
+    margin-top: 10vh;
+  }
   @media only screen and (max-width: 1515px) {
     max-height: 25rem;
   }
   @media only screen and (max-width: 1375px) {
+    margin-top: unset;
     margin-bottom: -10vh;
   }
   @media only screen and (max-width: 1050px) {
@@ -51,6 +55,12 @@
   max-width: 25rem;
   color: var(--white);
 
+  @media only screen and (max-width: 2560px) {
+    max-width: 30rem;
+  }
+  @media only screen and (max-width: 1920px) {
+    max-width: 25rem;
+  }
   @media only screen and (max-width: 1515px) {
     max-width: calc((100% - 7rem) / 2);
   }
