--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -8,10 +8,16 @@ html {
 
   font-size: 32px;
 
-  @media only screen and (max-width: 3839px) {
+  @media only screen and (max-width: 3420px) {
+    font-size: 26px;
+  }
+  @media only screen and (max-width: 2940px) {
     font-size: 21px;
   }
   @media only screen and (max-width: 2560px) {
+    font-size: 18px;
+  }
+  @media only screen and (max-width: 1920px) {
     font-size: 16px;
   }
   @media only screen and (max-width: 900px) {
